A major issue (for devices below 395px , the copyright text in the footer section , line overlapping occurs as the , line-height,  ,1.5px,  is too less.so this case is solved by removing the line height property. also the text-align is set to center  position  .

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -164,14 +164,14 @@ nav button{
     transform: scale(2);
     background:linear-gradient(45deg,#9100F8,#FB09B4,#F7E93F);
 }
-main{
+/* main{ */
     /* padding: 0 200px 0 200px; */ 
     /* less responsive */
 
 
     /* more responsive */
     /* width: 75%; */
-}
+/* } */
 .section-1{
     width: 75%;
     margin: 0 auto;
@@ -320,10 +320,10 @@ main{
     /* justify-content: space-between; */
     gap: 12px;
 }
-#episode-card-container section{
+/* #episode-card-container section{ */
     /* margin-top:auto; */
     /* border: 2px solid darkgoldenrod; */
-}
+/* } */
 #episode-card-container section >*{
     display: inline-block;
 }
@@ -567,9 +567,14 @@ footer div article>p{
     min-width: 135px;
 }
     /* banner end */
-main{
+
+
+/* main{ */
     /* width: 91%; */
-}
+/* } */
+
+
+
 .section-1{
     /*  */
     /*  */
@@ -657,9 +662,6 @@ main{
 
     font-size: 1.25rem;
 }
-#episode-card-container>article>div>p{
-
-}
 
 #episode-card-container{
     display: flex;
@@ -721,8 +723,6 @@ main{
 
     justify-content: center;
 }
-
-
 footer{
     display: flex;
     flex-direction: column;
@@ -768,8 +768,10 @@ footer div {
 }
 footer>p{
     font-weight: 400;
-    line-height: 1.5px;
+    /* line-height: 1.5px; */
     font-size: 1rem;
+    text-align: center;
+
 
 
     /*     #4.   issue temporarily solved */
